--- a/project/package.json
+++ b/project/package.json
@@ -2,6 +2,7 @@
   "name": "project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://milliorn.github.io/React-Digital-Business-Card",
   "dependencies": {
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.4",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +41,7 @@
   },
   "devDependencies": {
     "autoprefixer": "10.4.2",
+    "gh-pages": "^3.2.3",
     "postcss": "8.4.8",
     "tailwindcss": "3.0.23"
   }
