--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.6.0",
-    "react-image": "4.0.3",
+    "react-image": "^4.1.0",
     "react-scripts": "5.0.1",
     "react-visibility-sensor": "5.1.1",
     "typescript": "4.8.4"
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
