--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "react-icons": "5.0.1",
     "react-image": "^4.1.0",
     "react-scripts": "5.0.1",
-    "react-visibility-sensor": "5.1.1",
-    "typescript": "5.3.3"
+    "react-visibility-sensor": "5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +45,7 @@
     "autoprefixer": "10.4.17",
     "gh-pages": "4.0.0",
     "postcss": "8.4.33",
-    "tailwindcss": "3.2.1"
+    "tailwindcss": "3.2.1",
+    "typescript": "4.8.4"
   }
 }
