--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
     "gh-pages": "6.3.0",
     "postcss": "8.5.2",
     "tailwindcss": "4.0.6",
-    "typescript": "5.7.3"
+    "typescript": "^4.9.5"
   }
 }
