--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
     "react-dom": "19.0.0",
     "react-icons": "5.4.0",
     "react-image": "^4.1.0",
+    "react-intersection-observer": "^9.15.1",
     "react-scripts": "5.0.1",
     "react-visibility-sensor": "5.1.1"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@tailwindcss/postcss": "^4.0.6",
+    "@types/node": "22.13.3",
+    "@types/react-dom": "19.0.3",
+    "autoprefixer": "10.4.20",
+    "gh-pages": "6.3.0",
+    "postcss": "^8.5.2",
+    "postcss-import": "^16.1.0",
+    "postcss-loader": "^8.1.1",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,7 +30,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "tsc:build": "tsc -p .",
+    "tsc:watch": "tsc -p . -w"
   },
   "eslintConfig": {
     "extends": [
@@ -36,15 +51,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/node": "22.13.3",
-    "@types/react-dom": "19.0.3",
-    "autoprefixer": "10.4.20",
-    "gh-pages": "6.3.0",
-    "postcss": "8.5.2",
-    "tailwindcss": "4.0.6",
-    "typescript": "^4.9.5"
   }
 }
